[package]
name = "snafu-numbers"
description = "Special Numeral-Analogue Fuel Units"
version = "0.1.1"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
keywords = ["snafu", "advent-of-code"]
categories = ["mathematics", "parser-implementations"]
license = "EUPL-1.2"
repository = "https://github.com/sunsided/snafu-numbers"
edition = "2021"

[dependencies]
